Simple support for Spock Mock API
Add simple support for Mock/Stub/Spy API.
Support helper methods.
Support property initializer.
Support mockName from left-hand side variable.
Support for inferred type from variable.